tests/snapshots/tui_board_test__search_exited.snap
---
source: tests/tui_board_test.rs
expression: "(&state.search_query, state.search_focused)"
---
(
    "test",
    false,
)
