tests/snapshots/tui_board_test__toggle_current_column.snap
---
source: tests/tui_board_test.rs
assertion_line: 88
expression: "(state.visible_columns, state.current_column)"
---
(
    [
        true,
        false,
        true,
        true,
        true,
        true,
    ],
    0,
)
