tests/snapshots/tui_board_test__toggle_multiple_columns.snap
---
source: tests/tui_board_test.rs
assertion_line: 107
expression: state.visible_columns
---
[
    true,
    false,
    false,
    false,
    true,
    true,
]
